# Shiftnanigans

./: Cargo.toml  README.md
benches/: main.rs
benches/benchmarks/: mod.rs  segment_permutation_shifter_benchmark.rs
benches/benchmarks/pixel_board_randomizer/: mod.rs  small_plus_sign.rs
benches/benchmarks/segment_permutation_shifter/: mod.rs  single_average.rs
src/: cell_group_dependency_incrementer.rs  cell_group_localizer.rs  cell_group_manager.rs  element_indexer.rs  index_incrementer.rs  lib.rs  segment_container.rs  segment_permutation_incrementer.rs  symbolic_nonlinear_system_solver.rs
src/backup/: cell_group_dependency_incrementer.rs  mod.rs  segment_permutation_incrementer.rs
src/incrementer/: binary_density_incrementer.rs  binary_value_incrementer.rs  cell_group_dependency_incrementer.rs  element_indexer_incrementer.rs  fixed_binary_density_incrementer.rs  limited_incrementer.rs  mod.rs  paired_square_breadth_first_search_incrementer.rs  round_robin_incrementer.rs  shifter_incrementer.rs  shifting_cell_group_dependency_incrementer.rs  square_breadth_first_search_incrementer.rs  zipper_incrementer.rs
src/pixel_board/: mod.rs  pixel_board_randomizer.rs
src/shifter/: breadth_first_search_shifter.rs  cell_group_dependency_shifter.rs  combined_shifter.rs  encapsulated_shifter.rs  hyper_graph_cliche_shifter.rs  index_shifter.rs  mod.rs  scaling_square_breadth_first_search_shifter.rs  segment_permutation_shifter.rs  shifting_square_breadth_first_search_shifter.rs  singular_shifter.rs
