[package]
name = "shiftnanigans"
version = "0.3.5"
edition = "2021"
authors = ["Austin Heller"]
description = "This library contains different iteration data structures for either iterating or for shifting iteratively forward and backward."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/Shiftnanigans"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "data-structures", "algorithm"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1" }
log = { version = "0.4.17" }
nohash-hasher = { version = "0.2.0" }
fastrand = { version = "1.8.0" }
itertools = { version = "0.10.5" }

#time-graph = { version = "0.3.0" }
#gomez = { version = "0.3.1" }
#rusymbols = { version = "0.1.2" }

[dev-dependencies]
pretty_env_logger = { version = "0.4.0" }
rstest = { version = "0.16.0" }
criterion = { version = "0.4.0" }
uuid = { version = "1.2.2", features = ["v4"] }

[[bench]]
name = "main"
harness = false
